--- a/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
@@ -7,9 +7,8 @@
         <tr>
             <td valign="top" style="width: 400px">
                 <ul>
-                    <li><a href="{{ path("myshop.main_page") }}">Main page</a></li>
-                    <li><a href="{{ path("myshop.product_info", {name:1}) }}">Product details</a></li>
-      
+                    <li><a href="{{ path("myshop.main_page") }}">Главная страница</a></li>
+                    <li><a href="{{ path("myshop.product_list") }}">Список товаров</a></li> 
                 </ul>
             </td>
             <td valign="top">
