--- a/src/MyShop/DefaultBundle/Resources/views/Default/showProduct.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showProduct.html.twig
@@ -1,7 +1,13 @@
 {% extends "@MyShopDefault/Default/layout.html.twig" %}
 
+
+
 {% block body %}
-
-<h1>{{ productName }}</h1>
-
+    <h2>Описание товара</h2>
+    Модель: <b>{{ product.getModel() }}</b> <br/>
+    Цена: {{ product.getPrice() }}<br />
+    {{ product.getDescription() }}<br />
+    Дата добавления: {{ product.getDateCreatedAt().format(" H:i:s d.m.Y") }}
 {% endblock %}
+
+
