--- a/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
@@ -8,7 +8,8 @@
             <td valign="top" style="width: 400px">
                 <ul>
                     <li><a href="{{ path("myshop.main_page") }}">Главная страница</a></li>
-                    <li><a href="{{ path("myshop.product_list") }}">Список товаров</a></li> 
+                   <li><a href="{{ path("myshop.category_list") }}">Категории товаров</a></li>  
+                    <li><a href="{{ path("myshop.product_list") }}">Весь список товаров</a></li> 
                 </ul>
             </td>
             <td valign="top">
