--- a/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
@@ -1,7 +1,5 @@
-<html>
-<body>
-
-
+{% extends "@MyShopAdmin/layout.html.twig" %}
+{% block body %}
 
 <table border="1">
     <tr>
@@ -18,6 +16,7 @@
         <td>
             <a href="{{ path("my_shop.admin.product_delete", {id:product.id}) }}">Удалить</a><br/>
             <a href="{{ path("my_shop_admin.product_edit", {id:product.id}) }}">Редактировать</a><br/>
+            <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">Управление картинками</a>
         </td>
     </tr>
 {% endfor %}
@@ -28,5 +27,4 @@
     </td>
 </table >
 
-</body>
-</html>
+{% endblock %}
