--- a/src/MyShop/AdminBundle/Resources/views/Product/add.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/add.html.twig
@@ -1,5 +1,5 @@
 <h2>Добавление товара</h2>
 <form method="post" action="{{ path('my_shop_admin.product_add') }}">
 {{ form_widget(form) }}
-    <input type="submit" />
+    <input type="submit" value="Добавить" />
 </form>
