--- a/src/MyShop/AdminBundle/Resources/views/Product/edit.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/edit.html.twig
@@ -1,5 +1,5 @@
 <h2>Редактирование товара</h2>
 <form method="post" action="{{ path('my_shop_admin.product_edit', {id:product.id}) }}"> 
 {{ form_widget(form) }}
-    <input type="submit" />
+    <input type="submit" value="Редактировать" />
 </form>
