--- a/src/MyShop/AdminBundle/Resources/views/ProductPhoto/edit.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/ProductPhoto/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends "@MyShopAdmin/layout.html.twig" %}
 
 {% block body %}
-    <h3>Редактирование фото товара {{ product.model }}</h3>
-    <form enctype="multipart/form-data"{#для заливки файла на сервер#} method="post" action="{{ path("my_shop_admin.product_photo_edit", {id:product.getId()}) }}">
+    <h3>Редактирование фото {{ photo.getTitle() }} </h3>
+    <form  method="post" action="{{ path("my_shop_admin.product_photo_edit", {id:photo.getId()}) }}">
         {{ form_widget(form) }}
         <input type="submit" value="Редактировать" />
     </form>
