--- a/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
@@ -20,15 +20,19 @@
         <div class="grids_of_4">
           <div class="grid1_of_4">
                 <div class="content_box"><a href="#">
-                     {#<img src="#" class="img-responsive" alt="">#}
+                  
+                     {% for photo in product.getPhotos() %}
+                        <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
+                     <img src="/photos/{{ photo.getSmallFileName() }}" class="img-responsive " alt="">
                       </a>
+                    {% endfor %}
+
                     <h4><a href="{{ path("my_shop_admin.product_edit", {id:product.id}) }}"> {{ product.getModel() }}</a></h4>
                      <p>{{ product.getCategory().getName() }}</p>
                     
                     
                      <div class="item_add"><span class="item_price"><h6> ${{ product.getPrice() }}</h6></span></div>
-                     <h4><a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">Управление картинками</a></h4>
-
+                     
                      <div class="item_add">
                         <span class="item_price"><a href="{{ path("my_shop.admin.product_delete", {id:product.id}) }}">Удалить</a><br/></span>
                     </div>
