--- a/src/MyShop/AdminBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/layout.html.twig
@@ -14,6 +14,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link rel="stylesheet" href="{{ asset("bundles/myshopdefault/css/font-awesome.css") }}" />
 <!-- lined-icons -->
 <link rel="stylesheet" href="{{ asset("bundles/myshopdefault/css/icon-font.min.css") }}" />
+</head>
 
    <div class="page-container">
    <!--/content-inner-->
@@ -121,9 +122,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                          <li id="menu-academico" ><a href="{{ path("my_shop_admin.category_list") }}"><i class="fa fa-table"></i> <span> Категории</span> <span class="fa fa-angle-right" style="float: right"></span></a>
                                            <ul id="menu-academico-sub" >
                                             
-                                           <li id="menu-academico-avaliacoes" ><a href="#">Автомобили</a></li>
-                                            <li id="menu-academico-avaliacoes" ><a href="#">Смартфоны</a></li>
-                                            <li id="menu-academico-boletim" ><a href="#">Ноутбуки</a></li>
+                                           <li id="menu-academico-avaliacoes" ><a href="{{ path("my_shop_admin.product_list_by_category", {id_category:4}) }}">Автомобили</a></li>
+                                            <li id="menu-academico-avaliacoes" ><a href="{{ path("my_shop_admin.product_list_by_category", {id_category:1}) }}">Смартфоны</a></li>
+                                            <li id="menu-academico-boletim" ><a href="{{ path("my_shop_admin.product_list_by_category", {id_category:2}) }}">Ноутбуки</a></li>
                                            </ul>
                                         </li>
                                         
