--- a/src/MyShop/DefaultBundle/Resources/public/css/loginstyle.css
+++ b/src/MyShop/DefaultBundle/Resources/public/css/loginstyle.css
@@ -191,7 +191,7 @@ input#inputPasswordConfirm {
 }
 /*--//validation--*/
 body {
-    background: url('../images/background.jpg')no-repeat 0px 0px;
+    background: url('/images/background.jpg')no-repeat 0px 0px;
     background-size: cover;
 	min-height: 1080px;
 }
