--- a/src/MyShop/DefaultBundle/Resources/views/Default/showProductList.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showProductList.html.twig
@@ -16,8 +16,11 @@
           <div class="section group">
             {% for product in productList %}
                 <div class="grid_1_of_4 images_1_of_4">
-
-                     {#<a href="#"><img src="images/feature-pic1.jpg" alt="" /></a>#}
+                    {% for photo in product.getPhotos() %}
+                        <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
+                     <img src="/photos/{{ photo.getSmallFileName() }}" class="img-responsive " alt="">
+                      </a>
+                    {% endfor %}
                      <a href="{{ path("myshop.product_info", {id:product.getId()}) }}"><h2>{{ product.getModel() }}</h2></a>
                      <h3>Категория: <b>{{product.getCategory().getName()}}</b></h3>
                     <div class="price-details">
