--- a/src/MyShop/DefaultBundle/Resources/public/css/mainstyle.css
+++ b/src/MyShop/DefaultBundle/Resources/public/css/mainstyle.css
@@ -259,7 +259,7 @@ body {
     color: #9C9C9C;
     font-family: 'ambleregular';
     margin:0 20px;
-    background:url(../images/drop_arrow.png) no-repeat 0;
+    background:url(/images/drop_arrow.png) no-repeat 0;
     border-bottom: 1px solid #EEE;
     text-transform:uppercase;	
 }
@@ -688,10 +688,10 @@ body {
 	color: #E4292F;
 }
 .wish-list li.wish{
-	background:url(../images/wishlist.png) no-repeat 0;
+	background:url(/images/wishlist.png) no-repeat 0;
 }
 .wish-list li.compare{
-	background:url(../images/compare.png) no-repeat 0;
+	background:url(/images/compare.png) no-repeat 0;
 }
 .product-desc, .product-tags {
 	clear: both;
@@ -714,7 +714,7 @@ body {
 	font-weight: bold;
 }
 .input-box {
-	background: url(../images/tag.png) no-repeat 0 8px;
+	background: url(/images/tag.png) no-repeat 0 8px;
 	padding-left: 35px;
 }
 .input-box input[type="text"] {
@@ -858,11 +858,11 @@ body {
 	color: #666;
 	display: block;
 	font-family: 'ambleregular';
-	background: url(../images/drop_arrow.png) no-repeat 0;
+	background: url(/images/drop_arrow.png) no-repeat 0;
 	border-bottom:1px solid #F0F0F0;
 }
 .span_3_of_1 li a:hover {
-	background: url(../images/drop_arrow-hover.png) no-repeat 0;
+	background: url(/images/drop_arrow-hover.png) no-repeat 0;
 	color:#B81D22;
 }
 .span_3_of_2 .button {
