--- a/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
@@ -4,6 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+<link  href="{{ asset("bundles/myshopdefault/fonts/Amble-Regular-webfont.ttf") }}">
+
 <link rel="stylesheet" href="{{ asset("bundles/myshopdefault/css/mainslider.css") }}" />
 <link href="{{ asset("bundles/myshopdefault/css/mainstyle.css") }}" rel="stylesheet" type="text/css" media="all"/>
 
@@ -15,6 +17,8 @@
 <script type="text/javascript" src="{{ asset("bundles/myshopdefault/js/easing.js")}}"></script>
 
 <script type="text/javascript" src="{{ asset("bundles/myshopdefault/js/startstop-slider.js")}}"></script>
+
+<script type="text/javascript" src="{{ asset("bundles/myshopdefault/font/startstop-slider.js")}}"></script>
 
 
 </head>
