--- a/src/MyShop/DefaultBundle/Resources/views/Default/showCategoryList.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showCategoryList.html.twig
@@ -20,7 +20,7 @@
                      <a href="#"><h2>{{ product.getCategory().getName() }}</h2></a>
                     <div class="price-details">
                        <div class="price-number">
-                            <p><span class="rupees">Количество товаров</span></p>
+                            <p><span class="rupees">Количество товаров:</span></p>
                         </div>
                              <div class="clear"></div>
                     </div>
