--- a/src/MyShop/AdminBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/layout.html.twig
@@ -29,7 +29,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="top_right">
                                         <ul>
                                             <li><a href="#">help</a></li>|
-                                            <li><a href="#">Contact</a></li>|
+                                            <li><a href="#">API</a></li>|
                                             <li><a href="{{ path("my_shop_admin.user_add") }}">Добавить Администратора</a></li>
                                         </ul>
                                     </div>
@@ -50,6 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="head-t">
                                     <div class="logo">
                                         <a href="#"><img src="/images/mainlogo.png" class="img-responsive" alt=""> </a>
+                                        
                                          
                                     </div>
                                         <!-- start header_right -->
