--- a/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
@@ -4,7 +4,6 @@
 <div class="w_content">
 <div class="women_main">
     <!-- start content -->
-
    <div class="w_content">
         <div class="women">
             <a href="{{ path("my_shop_admin.product_add")}}"><h4>Добавить товар</h4></a>
@@ -15,19 +14,25 @@
              <div class="clearfix"></div>   
         </div>
         <!-- grids_of_4 -->
-
         {% for product in productList %}
+
         <div class="grids_of_4">
           <div class="grid1_of_4">
                 <div class="content_box"><a href="#">
+      
+                    {% for photo in product.getPhotos() %}
 
-                  
-                  {% for photo in product.getPhotos() %}
                         <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
                      <img src="/photos/{{ photo.getSmallFileName() }}" class="img-responsive " alt="">
-                      </a>
+                     </a>
+
+                      {% else %}
+
+                        <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
+                        <img src="/images/no-picture.jpg" class="img-responsive" alt="">
+                        </a>
+
                     {% endfor %}
-                     
 
                     <h4><a href="{{ path("my_shop_admin.product_edit", {id:product.id}) }}"> {{ product.getModel() }}</a></h4>
                      <p>{{ product.getCategory().getName() }}</p>
@@ -38,12 +43,12 @@
                      <div class="item_add">
                         <span class="item_price"><a href="{{ path("my_shop.admin.product_delete", {id:product.id}) }}">Удалить</a><br/></span>
                     </div>
-
-                  
-                     </div>
+                  </div>
                 </div>
             </div>
+
             {% endfor %}
+
 {% endblock %}
 {#
 <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
@@ -51,46 +56,3 @@
           #}        
 
 
-{#
-{% for photo in product.getPhotos() %}
-                        <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
-                     <img src="/photos/{{ photo.getSmallFileName() }}" class="img-responsive " alt="">
-                      </a>
-                    {% endfor %}
-                    {#
-
-
-
-
-
-{#
-{% block body %}
-
-<table border="1">
-    <tr>
-        <td>Модель</td>
-        <td>Цена</td>
-        <td>Категория</td>
-    </tr>
-{% for product in productList %}
-    <tr>
-        <td>{{ product.getModel() }}</td>
-        <td>{{ product.getPrice() }}</td>
-        <td>{{ product.getCategory().getName() }}</td>
-
-        <td>
-            <a href="{{ path("my_shop.admin.product_delete", {id:product.id}) }}">Удалить</a><br/>
-            <a href="{{ path("my_shop_admin.product_edit", {id:product.id}) }}">Редактировать</a><br/>
-            <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">Управление картинками</a>
-        </td>
-    </tr>
-{% endfor %}
-</table>
-<table border="1">
-    <td>
-        <a href="{{ path("my_shop_admin.product_add")}}">Добавить Товар</a><br/>
-    </td>
-</table >
-
-{% endblock %}
-#}
