category_icon,demoload,api_client

--- a/src/MyShop/AdminBundle/Resources/views/Login/login.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Login/login.html.twig
@@ -16,7 +16,7 @@
 				<!-- validation -->
 				<div class="grids">
 					<div class="progressbar-heading grids-heading">
-						<h2>login form</h2>
+						<h2>logan form</h2>
 					</div>
 					
 					<div class="forms-grids">
