--- a/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
@@ -33,7 +33,7 @@
                     {% else %}
 
                     <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
-                         <img src="/images/no-picture.jpg" class="img-responsive" alt="">
+                         <img src="/images/no-picture.png" class="img-responsive" alt="">
                           </a>
                       
 
