--- a/src/MyShop/AdminBundle/Resources/views/Category/list.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Category/list.html.twig
@@ -6,16 +6,18 @@
                         <div class="product">
                            <div class="product-desc">
                                 <div class="product-img">
-                                   <img src="/images/w8.jpg" class="img-responsive " alt="">
+                                  <a href="{{ url("my_shop_admin.product_list_by_category", {id_category:cat.id}) }}">
+                                   <img src="/photos/{{ cat.getIconFileName() }}" class="img-responsive " alt="">
+                                  </a>
                                </div>
                                <div class="prod1-desc">
                                    <h5><a class="product_link" href="{{ url("my_shop_admin.product_list_by_category", {id_category:cat.id}) }}">{{ cat.name }}</h5></a>
                                    <h6 class="product_descr"><a href="{{ url("my_shop_admin.category_delete", {id_category:cat.id}) }}"><b>Удалить категорию</b></a> <br/> </h6> 
-                                   <h6 class="product_descr"><a href="{{ url("my_shop_admin.category_edit", {id_category:cat.id}) }}"><b>Редактировать категорию</b></a>  <br/> </h6>                                  
+                                   <h6 class="product_descr"><a href="{{ url("my_shop_admin.category_edit", {id_category:cat.id}) }}"><b>Редактировать категорию</b></a>  <br/> </h6>   
+                                   <h6 class="product_descr"><a href="{{ url("my_shop.admin.category_icon_delete", {id_category:cat.id}) }}"><b>Удалить иконку</b></a> <br/> </h6>                                 
                                </div>
                               <div class="clearfix"></div>
                           </div>
-                         
                          <div class="clearfix"></div>
                      </div>
                 {% endfor %}
@@ -25,7 +27,10 @@
 
 
 
-
-
-
+{#
+                          {% else %}
+                        <div class="product-img">
+                          <img src="/images/no-picture.png" class="img-responsive" alt="">
+                        </div>     
+#}
 
