--- a/src/MyShop/AdminBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/layout.html.twig
@@ -28,7 +28,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="header_top">
                                     <div class="top_right">
                                         <ul>
-                                            <li><a href="#">help</a></li>|
+                                            <li><a href="{{ path("my_shop_admin.load_some_users") }}">Добавить тест-админа</a></li>|
+                                            <li><a href="#">Добавить тест-товар</a></li>|
                                             <li><a href="#">API</a></li>|
                                             <li><a href="{{ path("my_shop_admin.user_add") }}">Добавить Администратора</a></li>
                                         </ul>
@@ -49,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <div class="header">
                                 <div class="head-t">
                                     <div class="logo">
-                                        <a href="#"><img src="/images/mainlogo.png" class="img-responsive" alt=""> </a>
+                                        <a href="#"><img src="/images/mainlogo.jpg" class="img-responsive" alt=""> </a>
                                         
                                          
                                     </div>
@@ -59,32 +60,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <div class="log">
                                                 <div class="login">
                                                     <div id="loginContainer"><a href="{{ path("logout") }}" id="loginButton" class=""><span>Logout</span></a>
-                                                        <div id="loginBox" style="display: none;">                
-                                                            <form id="loginForm">
-                                                                    <fieldset id="body">
-                                                                        <fieldset>
-                                                                              <label for="email">Email Address</label>
-                                                                              <input type="text" name="email" id="email">
-                                                                        </fieldset>
-                                                                        <fieldset>
-                                                                                <label for="password">Password</label>
-                                                                                <input type="password" name="password" id="password">
-                                                                         </fieldset>
-                                                                        <input type="submit" id="login" value="Sign in">
-                                                                        <label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
-                                                                    </fieldset>
-                                                                <span><a >Forgot your password?</a></span>
-                                                            </form>
-                                                        </div>
+                                                     
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="reg">
-                                                <a href="#">REGISTER</a>
-                                            </div>
-                                        <div class="create_btn">
-                                            <a href="#">CHECKOUT</a>
-                                        </div>
                                         <div class="clearfix"> </div>
                                     </div>
                                     <div class="search">
