--- a/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
@@ -91,8 +91,8 @@
 				<div class="col_1_of_4 span_1_of_4">
 						<h4>Information</h4>
 						<ul>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Customer Service</a></li>
+						<li><a href="{{ path("myshop.api_list")}}">API</a></li>
+						<li><a href="contact.html">About Us</a></li>
 						<li><a href="#">Advanced Search</a></li>
 						<li><a href="delivery.html">Orders and Returns</a></li>
 						<li><a href="contact.html">Contact Us</a></li>
