--- a/src/MyShop/DefaultBundle/Resources/views/Default/showCategoryList.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showCategoryList.html.twig
@@ -13,11 +13,11 @@
         </div>
         
           <div class="section group">
-            {% for product in productList %}
+           {% for cat in categoryList %}
                 <div class="grid_1_of_4 images_1_of_4">
 
-                     <a href="#"><img src="/images/feature-pic1.jpg" alt="" /></a>
-                     <a href="#"><h2>{{ product.getCategory().getName() }}</h2></a>
+                     <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><img src="/photos/{{ cat.getIconFileName() }}" class="img-responsive " alt=""></a>
+                     <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><h2>{{ cat.name }}</h2></a>
                     <div class="price-details">
                        <div class="price-number">
                             <p><span class="rupees">Количество товаров:</span></p>
@@ -48,4 +48,24 @@
     {% else %}
          Категорий нет!
     {% endfor %}
-    </ul> #}
+    </ul> 
+
+    {% for product in productList %}
+                <div class="grid_1_of_4 images_1_of_4">
+
+                     <a href="#"><img src="/images/feature-pic1.jpg" alt="" /></a>
+                     <a href="#"><h2>{{product.getCategory().getName()}}</h2></a>
+                    <div class="price-details">
+                       <div class="price-number">
+                            <p><span class="rupees">Количество товаров:</span></p>
+                        </div>
+                             <div class="clear"></div>
+                    </div>
+                     
+                </div>
+                {% endfor %}
+
+
+
+
+    #}
