--- a/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Product/list.html.twig
@@ -6,7 +6,9 @@
     <!-- start content -->
    <div class="w_content">
         <div class="women">
-            <a href="{{ path("my_shop_admin.product_add")}}"><h4>Добавить товар</h4></a>
+            <a href="{{ path("my_shop_admin.product_add")}}"><h4>Добавить товар &nbsp; &nbsp;  </h4></a> 
+            <a href="{{ path("my_shop_admin.products_export_csv")}}"><h4>Скачать .csw &nbsp; &nbsp;</h4></a>
+            <a href="{{ path("my_shop_admin.products_import_csv")}}"><h4>Загрузить .csw</h4></a>
             <ul class="w_nav">
                         <li><a href="#"><h4>Количество товаров - <span>5 штук</span> </h4></a></li>
                         <div class="clear"></div>   
