--- a/src/MyShop/AdminBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/layout.html.twig
@@ -84,7 +84,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             {% block body %}
             {% endblock %}
             </div>
-            
                 <!--//content-inner-->
             <!--/sidebar-menu-->
                  <div class="sidebar-menu">
@@ -125,6 +124,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                               </div>
                               <div class="clearfix"></div>      
                             </div>
+                                <div class="foot-top">
+    
+        <div class="col-md-6 s-c">
+            <div style = "margin: 0 auto; text-align: center;" >{% block footer %}{% endblock %}</div>
+                <div class="clearfix"> </div>
+        </div>
+        <div class="col-md-6 s-c">
+            <div class="stay">
+                        <div class="stay-left">
+
+                        </div>
+                        
+                        <div class="clearfix"> </div>
+            </div>
+        </div>
+            <div class="clearfix"> </div>
+    
+</div>
 </body>
 </html>
 
