--- a/src/MyShop/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,19 @@
 {% extends "@MyShopAdmin/layout.html.twig" %}
 {% block body %}
+{#<p>{{ 'Symfony is great' | trans }}</p>	
 	
+<p> {% trans %}Symfony is great{% endtrans %} </p>	#}
+
+<script type = "application/javascript" src="{{ asset('bundles/myshopadmin/jquery-3.2.0.min.js') }}"></script>
+<script>
+	$(function() {
+		$.get("/admin/test", function(responseData){
+			console.log(responseData);
+			/*(Routing.generate('my_shop_admin.test' )*/
+		});
+	});
+</script>
+
 <h2>Тут будет главная страница</h2>
 
 {% endblock %}
