--- a/src/MyShop/AdminBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/layout.html.twig
@@ -14,6 +14,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link rel="stylesheet" href="{{ asset("bundles/myshopdefault/css/font-awesome.css") }}" />
 <!-- lined-icons -->
 <link rel="stylesheet" href="{{ asset("bundles/myshopdefault/css/icon-font.min.css") }}" />
+<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+<script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 </head>
 
    <div class="page-container">
