--- a/src/MyShop/DefaultBundle/Resources/views/Default/showProductList.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showProductList.html.twig
@@ -3,6 +3,7 @@
 
 
 {% block body %}
+
     <div class="content_top">
             <div class="heading">
             <h3>Список товаров</h3>
@@ -12,7 +13,7 @@
             </div>
             <div class="clear"></div>
         </div>
-        
+    
           <div class="section group">
             {% for product in productList %}
                 <div class="grid_1_of_4 images_1_of_4">
@@ -22,7 +23,6 @@
                       </a>
 
                       {% else %}
-
                         <a href="{{ path("my_shop_admin.product_photo_list", {idProduct:product.getId()}) }}">
                         <img src="/images/no-picture.png" class="img-responsive" alt="">
                         </a>
@@ -43,10 +43,10 @@
                 </div>
                 {% endfor %}
 
-               
             </div>
-
-
+            <div style = "margin: 0 auto; text-align: center;" >
+                   {{ knp_pagination_render(productList) }}
+            </div>
 {% endblock %}
 
 
