customer, basket, orders, w/o task

--- a/src/MyShop/DefaultBundle/Resources/views/Default/showProduct.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showProduct.html.twig
@@ -68,7 +68,7 @@
 					    	<li><a href="#"><img src="images/twitter.png" alt="" /></a></li>					    
 			    		</ul>
 					</div>
-					<div class="button"><span><a href="#">Add to Cart</a></span></div>					
+					<div class="button"><span><a href="{{ path('myshop.add_product_to_basket', {idProduct:product.id}) }}">Add to Cart</a></span></div>					
 					<div class="clear"></div>
 				</div>
 				 <div class="wish-list">
