--- a/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/layout.html.twig
@@ -31,8 +31,12 @@
 			</div>
 			<div class="account_desc">
 				<ul>
-					<li><a href="#">Регистрация</a></li>
-					<li><a href="#">Войти</a></li>
+					{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+						<li><a href="{{ path('myshop.logout') }}">Выйти</a></li>
+					{% else %}
+						<li><a href="{{ path('myshop.registration') }}">Регистрация</a></li>
+						<li><a href="{{ path('myshop.login') }}">Войти</a></li>
+					{% endif %}
 					<li><a href="#">Доставка</a></li>
 					<li><a href="#">Заказ товара</a></li>
 					<li><a href="#">Мой аккаунт</a></li>
@@ -44,12 +48,15 @@
 			<div class="logo">
 				<a href="{{ path("myshop.main_page")}}"><img src="/images/logo.png" alt="" /></a>
 			</div>
+			{% if is_granted('ROLE_CUSTOMER') %}
 			  <div class="cart">
+			  					{{ render(controller('MyShopDefaultBundle:Basket:index')) }}
 			  	   <p><span>Корзина:</span><div id="dd" class="wrapper-dropdown-2"> 0 Товаров - $0.00
 			  	   	<ul class="dropdown">
 							<li>У вас нет товаров в корзине</li>
 					</ul></div></p>
 			  </div>
+			{% endif %}
 	 <div class="clear"></div>
   </div>
 	<div class="header_bottom">
