--- a/src/MyShop/DefaultBundle/Resources/views/Default/showProductList.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showProductList.html.twig
@@ -9,7 +9,7 @@
             <h3>Список товаров</h3>
             </div>
             <div class="see">
-                <p><a href="#">Выбрать категорию</a></p>
+                <p><a href="{{ path("myshop.category_list") }}">Выбрать категорию</a></p>
             </div>
             <div class="clear"></div>
         </div>
@@ -35,7 +35,7 @@
                             <p><span class="rupees">${{product.getPrice()}}</span></p>
                         </div>
                                 <div class="add-cart">                              
-                                    <h4><a href="#">Add to Cart</a></h4>
+                                    <h4><a href="{{ path('myshop.add_product_to_basket', {idProduct:product.id}) }}">Add to Cart</a></h4>
                                  </div>
                              <div class="clear"></div>
                     </div>
