--- a/src/MyShop/DefaultBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/layout.html.twig
@@ -31,8 +31,8 @@
 			</div>
 			<div class="account_desc">
 				<ul>
-					<li><a href="#">Регистрация</a></li>
-					<li><a href="#">Войти</a></li>
+					<li><a href="{{ path('myshop.registration') }}">Регистрация</a></li>
+					<li><a href="{{ path('myshop.login') }}">Войти</a></li>
 					<li><a href="#">Доставка</a></li>
 					<li><a href="#">Заказ товара</a></li>
 					<li><a href="#">Мой аккаунт</a></li>
