--- a/src/MyShop/AdminBundle/Resources/views/layout.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/layout.html.twig
@@ -35,7 +35,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             {#    {{ path("my_shop_admin.load_some_product") }}    #}
                                             <li><a href="{{ path("my_shop_admin.load_some_category") }}">Демо-категория</a></li>|
                                             <li><a href="{{ path("my_shop_admin.user_add") }}">Добавить Администратора</a></li>|
-                                            <li><a href="#">API</a></li>
+                                            <li><a href="{{ path("myshop.admin_order_list") }}">История заказов</a></li>
                                         </ul>
                                     </div>
                                     <div class="top_left">
