--- a/src/MyShop/DefaultBundle/Resources/views/Default/showCategoryList.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Default/showCategoryList.html.twig
@@ -13,11 +13,12 @@
         </div>
         
           <div class="section group">
-           {% for cat in categoryList if  cat.getIconFileName() %}
+           {% for cat in categoryList %}
+                {% if cat.iconFileName is empty %}
             
                 <div class="grid_1_of_4 images_1_of_4">
                     
-                     <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><img src="/photos/{{ cat.getIconFileName() }}" class="img-responsive " alt=""></a>
+                     <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><img src="/images/no-picture.png" class="img-responsive " alt=""></a>
                      <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><h2>{{ cat.name }}</h2></a>
                     <div class="price-details">
                        <div class="price-number">
@@ -30,7 +31,7 @@
                 {% else %}
                     <div class="grid_1_of_4 images_1_of_4">
                     
-                     <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><img src="/images/no-picture.png" class="img-responsive " alt=""></a>
+                     <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><img src="/photos/{{ cat.getIconFileName() }}" class="img-responsive " alt=""></a>
                      <a href="{{ url("my_shop.product_list_by_category", {id_category:cat.id}) }}"><h2>{{ cat.name }}</h2></a>
                     <div class="price-details">
                        <div class="price-number">
@@ -39,7 +40,7 @@
                              <div class="clear"></div>
                     </div>
                 </div>
-
+                {% endif %}
             {% endfor %}
                
             </div>
