--- a/src/MyShop/DefaultBundle/Resources/views/Basket/index.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Basket/index.html.twig
@@ -1,14 +1,11 @@
 <div>
-    <b>Корзина товаров</b><br />
-
     {% if order.products|length > 0 %}
         <ul>
     {% for product in order.products %}
-        {% set sum = product.price * product.count %}
-        <li><b>{{ product.model }}</b> {{ product.price }}x{{ product.count }}={{ sum }}</li>
+        <li><b>{{ product.model }}</b> {{ product.price }}x{{ product.count }} = {{ product.sum }}</li>
     {% endfor %}
-        </ul>
 
+        </ul>
         <a href="{{ path('myshop.order_confirm') }}">Оформить заказ</a>
     {% endif %}
 </div>
