--- a/src/MyShop/AdminBundle/Resources/views/Orders/index.html.twig
+++ b/src/MyShop/AdminBundle/Resources/views/Orders/index.html.twig
@@ -4,6 +4,11 @@
 <div>
 {% for order in ordersList if order.status == 2 or order.status == 3  %}
 <h3>Заказчик:</h3>{{ order.phoneNumber }}, {{ order.deliveryType }}, {{ order.customer }}, {{ order.dateCreatedAt.format(" H:i:s d.m.Y") }} <br />
+{% if order.getConfirmStatus() == 2 %}
+	Заказ не подтвержден!
+{% else %}
+	Заказ подтвержден!
+{% endif %}
 <h3>Товары:</h3>
 {% for product in order.products %}
         <li><b>{{ product.model }}</b> {{ product.price }}x{{ product.count }} = {{ product.sum }}</li>
@@ -11,12 +16,6 @@
     <form method="POST" action="{{ path('myshop.admin_confirm_order', {id:order.id}) }}">
             <input type="submit" value="Подтверить" />
         </form>
-        {% for order in ordersList if order.getConfirmStatus() == 1 %}
-		Заказ ожидает подтверждения!
-	{% else %}
-		Заказ подтверждён!
-	{% endfor %}
-
 
 </div>
 
