--- a/src/MyShop/DefaultBundle/Resources/views/Basket/index.html.twig
+++ b/src/MyShop/DefaultBundle/Resources/views/Basket/index.html.twig
@@ -1,11 +1,26 @@
 <div>
     {% if order.products|length > 0 %}
-        <ul>
-    {% for product in order.products %}
-        <li><b>{{ product.model }}</b> {{ product.price }}x{{ product.count }} = {{ product.sum }}</li>
-    {% endfor %}
+        
 
-        </ul>
-        <a href="{{ path('myshop.order_confirm') }}">Оформить заказ</a>
+        	{% block cart %}
+        		<div class="cart">
+                <p><span>Корзина:</span><div id="dd" class="wrapper-dropdown-2">Количество Товаров - {{ order.getTotalCount() }} 
+                Сумма: ${{ order.getTotalPrice() }} 
+                    <ul class="dropdown">
+                            <li>У вас нет товаров в корзине</li>
+                    </ul></div></p>
+                        {% for product in order.products %}
+
+                        <li><b>{{ product.model }}</b> {{ product.price }}x{{ product.count }} = {{ product.sum }}</li>
+
+                        {% endfor %}
+
+                <a href="{{ path('myshop.order_confirm') }}">Перейти в корзину</a>                         
+                </ul>
+
+ 
+			{% endblock %}
+        			  	   
+
     {% endif %}
 </div>
